# core

./: .gitignore  .gitmodules  CONTRIBUTING.md  Makefile  README.md  flake.nix  pyproject.toml  zensical.toml
.github/: git-pr-release.erb  release.yaml
.github/workflows/: ci.yml  docs.yml  git-pr-release.yaml  publish.yml
docs/: getting-started.md  index.md  playground.md
docs/guide/: builder.md  diagram.md  summary.md
docs/reference/: builder.md  diagram.md  loader.md  models.md  summary.md  validate.md
examples/: getting_started.py  jupyter-lite.json
examples/__marimo__/session/: getting_started.py.json
examples/notebooks/: tutorial.ipynb
examples/output/: README.md  chip.yaml  components.yaml  control.yaml  cooldown.yaml  metadata.yaml  readout_return.yaml  readout_send.yaml  summary.md
src/cryo_wiring_core/: __init__.py  builder.py  bundle.py  config.py  diagram.py  layout.py  loader.py  models.py  summary.py  validate.py
src/cryo_wiring_core/schemas/: cooldown.schema.json
src/cryo_wiring_core/templates/: components.yaml
src/cryowire/: __init__.py  builder.py  bundle.py  cli.py  config.py  diagram.py  layout.py  loader.py  models.py  summary.py  validate.py
tests/: test_roundtrip.py  test_validate.py
