[project]
name = "cryo-wiring-core"
version = "0.1.0"
description = "JSON Schema validation for cryo-wiring configuration files"
readme = "README.md"
authors = [
    { name = "orangekame3", email = "miya.org.0309@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "jsonschema>=4.23",
    "pyyaml>=6.0",
]

[build-system]
requires = ["uv_build>=0.9.11,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = ["pytest>=8.0"]
