[project]
name = "cryowire"
version = "0.1.0"
description = "JSON Schema validation for cryowire configuration files"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "orangekame3", email = "miya.org.0309@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "jsonschema>=4.23",
    "matplotlib>=3.7",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "rich>=13.0",
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Physics",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/cryowire/core"
Repository = "https://github.com/cryowire/core"
Issues = "https://github.com/cryowire/core/issues"

[build-system]
requires = ["uv_build>=0.9.11,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = ["pytest>=8.0"]
docs = ["zensical"]
example = ["marimo>=0.10"]
