[project]
name = "cryowire"
dynamic = ["version"]
description = "JSON Schema validation for cryowire configuration files"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "orangekame3", email = "miya.org.0309@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "jsonschema>=4.23",
    "matplotlib>=3.7",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "rich>=13.0",
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Physics",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/cryowire/cryowire"
Repository = "https://github.com/cryowire/cryowire"
Issues = "https://github.com/cryowire/cryowire/issues"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/cryowire/_version.py"

[dependency-groups]
dev = ["pytest>=8.0"]
docs = ["zensical"]
playground = ["jupyterlite-core>=0.4", "jupyterlite-pyodide-kernel>=0.4", "jupyter-server>=2.0"]
